--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,1 +1,8 @@
 Options +Indexes
+
+RewriteEngine On
+
+# if the request is a folder with a markdown index, serve it
+RewriteCond %{REQUEST_FILENAME} -d 
+RewriteCond %{REQUEST_FILENAME}/index.md -f
+RewriteRule ^(.*)$ md2html/route.php [L]
