update GitHub Actions
attempt to show HTTP response content

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,19 @@ name: Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
-    - name: Deploy Stage
-      uses: fjogeleit/http-request-action@master
-      with:
-        url: 'http://swharden.com/scottplot/deploy'
-        method: 'POST'
-        bearerToken: ${{ secrets.API_KEY }}
+      - name: Make Request
+        id: req
+        uses: fjogeleit/http-request-action@master
+        with:
+          url: "http://swharden.com/scottplot/deploy"
+          method: "POST"
+          bearerToken: ${{ secrets.API_KEY }}
+      - name: Show Response
+        run: echo ${{ steps.req.response }}
